# paidan_20260223

./: .dockerignore  .env.docker.example  .eslintrc.json  .gitignore  .md-to-pdf.json  AUDIT-REPORT.md  BUSINESS_PROCESS.md  CICD_IMPLEMENTATION.md  CLEANUP_REPORT.md  CODEBASE.md  CODE_QUALITY_REPORT.md  COMPONENT_LIBRARY_DOCS.md  COMPONENT_MIGRATION_PROGRESS.md  COMPONENT_SHARING_COMPLETE.md  COMPREHENSIVE_TEST_REPORT.md  DATABASE_DESIGN.md  DEPLOY.md  Dockerfile  Dockerfile-simple  Dockerfile.pc  ESLINT_FIX_GUIDE.md  FINAL_OPTIMIZATION_REPORT.md  FIX-RECORD.md  FRONTEND_API_INTEGRATION.md  OPTIMIZATION_DEPS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  SORTING_GUIDE.md  SSTCP维保系统操作手册.md  TEST_GUIDE.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  TEST_report.md  TROUBLESHOOTING.md  UI优化建议.md  check_backend.ps1  check_completed.py  check_data.sh  (+90 more)
backend-python/: .env.example  .env.postgresql  .gitignore  API_DOCUMENTATION.md  CODE_QUALITY_REPORT.md  DATABASE_SETUP.md  Dockerfile  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  POSTGRESQL_MIGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  alembic.ini  check_all_data.py  check_data.py  check_database.py  check_db.py  check_files.py  check_files_final.py  check_images.py  check_logs.py  check_logs_db.py  check_operation_logs.py  check_photos.py  check_photos_db.py  check_photos_detail.py  check_server_images.py  check_server_logs.sh  check_specific_order.py  check_table_structure.py  check_tables.py  check_upload_records.py  check_uploaded.py  check_uploaded_files.py  check_users.py  clean_database.py  create_sync_task.ps1  create_tables.py  defects.py  delete_test_data.py  (+34 more)
backend-python/alembic/: env.py
backend-python/alembic/versions/: 001_initial_sync.py  ab6f0198f456_merge_heads_2.py  add_client_contact_id.py  add_created_by_temp_repair.py  add_customer_signature.py  add_dingtalk_fields.py  add_maintenance_personnel_indexes.py  add_oss_storage_fields.py  add_photos_signature.py  add_spot_work_indexes.py  add_work_content_column.py  convert_photos_to_jsonb.py  convert_remaining_text_to_jsonb.py  create_uploaded_file.py  drop_operation_type.py  merge_heads.py
backend-python/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend-python/app/api/: versioning.py
backend-python/app/middleware/: __init__.py  csp.py  csrf.py  error_recording_middleware.py  rate_limit.py  request_logging.py
backend-python/app/models/: __init__.py  customer.py  customer_contact.py  dictionary.py  enums.py  inspection_item.py  maintenance_log.py  maintenance_plan.py  mixins.py  online_user.py  operation_type.py  periodic_inspection.py  periodic_inspection_record.py  personnel.py  project_info.py  repair_tools.py  repair_tools_inbound.py  spare_parts_inbound.py  spare_parts_stock.py  spare_parts_usage.py  spot_work.py  spot_work_worker.py  temporary_repair.py  uploaded_file.py  user_dashboard_config.py  weekly_report.py  work_order_operation_log.py  work_plan.py
backend-python/app/repositories/: __init__.py  base.py  customer.py  customer_contact.py  dictionary.py  inspection_item.py  maintenance_plan.py  online_user.py  periodic_inspection.py  periodic_inspection_record.py  (+11 more)
backend-python/migrations/: 001_unify_plan_tables.sql  002_add_spot_work_contact_fields.sql  002_create_weekly_report.sql  003_add_spare_parts_foreign_key.sql  004_update_operation_log_fields.sql  005_add_spare_parts_return_fields.sql  006_add_soft_delete_fields.sql  007_unify_work_order_status.sql  008_add_missing_indexes.sql  009_add_password_fields.py  010_maintenance_log_project_nullable.sql  add_reject_reason.py  check_tables.py
backend-python/scripts/: __init__.py  add_execution_result_field.py  add_filled_count_to_periodic_inspection.py  add_filled_count_to_work_plan.py  add_project_manager_field.py  add_total_count_column.py  add_total_count_direct.py  add_total_count_sqlalchemy.py  add_total_count_to_work_plan.py  audit_image_files.py  check_502_error.py  check_aliyun_rds.py  check_all_databases.py  check_all_photos.py  check_all_photos_v2.py  check_all_photos_v3.py  check_all_urls.py  check_any_url.py  check_api_data.py  check_assets.py  check_container_files.py  check_container_mounts.py  check_container_status.py  check_data_consistency.py  check_data_flow.py  check_data_storage.py  check_database.py  check_database_logs.py  check_db_data.py  check_db_indexes.py  check_db_projects.py  check_db_schema.py  check_db_tables.py  check_deployed_files.py  check_docs.py  check_endpoints.py  check_file.py  check_full_url.py  check_full_url_v2.py  check_full_url_v3.py  (+131 more)
backend-python/tests/: __init__.py  conftest.py  performance_test.py  test_api.py  test_api_security.py  test_auth.py  test_config.py  test_export_pdf.py  test_health.py  test_integration.py  test_online_user.py  test_pagination.py  test_project_info.py  test_services.py  test_spare_parts_stock.py  test_spot_work.py  test_utils.py
(+455 files in other folders)
